--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -150,15 +150,14 @@
 					<div class="subscription_box text-center">
 						<h2 class="text-uppercase text-white">Что Вам нужно сделать для заказа?</h2>
 						<p class="text-white">
-							Просто напишите одним сообщением Ваше Ф.И.О и номер телефона,а дальше я с Вами свяжусь. 
+							Просто напишите мне в удобном для вас приложении :) 
 						</p>
 						<div class="subcribe-form" id="mc_embed_signup">
-							<form target="_blank" novalidate="true" method="post" class="subscription relative">
-								<input name="text" placeholder="Ф.И.О и номер для связи" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Ф.И.О и номер для связи'" required="" type="text">
-								<div style="position: absolute; left: -5000px;">
-									<input name="text" tabindex="-1" value="" type="text">
-								</div>
-								<button class="primary-btn hover d-inline">Летс гоу :)</button>
+							<a class="primary_btn tr-bg" href="https://t.me/mahamerz"><span>telegram</span></a>
+							<br>
+							<a class="primary_btn tr-bg" href="https://wa.me/89389926611"><span>whatsapp</span></a>
+							<a class="primary_btn tr-bg" href="https://www.instagram.com/mahamerz/"><span>instagram</span></a>
+
 								<div class="info"></div>
 							</form>
 						</div>
