--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -155,7 +155,7 @@
 						<div class="subcribe-form" id="mc_embed_signup">
 							<a class="primary_btn tr-bg" href="https://t.me/mahamerz"><span>telegram</span></a>
 							<br>
-							<a class="primary_btn tr-bg" href="https://wa.me/89389926611"><span>whatsapp</span></a>
+							<a class="primary_btn tr-bg" href="https://wa.me/+79389926611"><span>whatsapp</span></a>
 							<a class="primary_btn tr-bg" href="https://www.instagram.com/mahamerz/"><span>instagram</span></a>
 
 								<div class="info"></div>
