--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -348,14 +348,14 @@ button:focus {
   background-position: center;
   background-size: cover; }
   .home_banner_area .banner_inner {
-    width: 100%; }
+    max-width: 100%; }
     .home_banner_area .banner_inner .home_right_img {
       padding-top: 197px; }
       @media (max-width: 100%) {
         .home_banner_area .banner_inner .home_right_img img {
-          max-width: auto;
-          height: auto; } }
-      @media (max-width: 991px) {
+          max-width: 100%;
+          max-height: 100%; } }
+      @media (max-width: 100%) {
         .home_banner_area .banner_inner .home_right_img {
           display: none; } }
     .home_banner_area .banner_inner .col-lg-7 {
@@ -2494,7 +2494,27 @@ h6 {
     margin-bottom: 0px; }
   .feature_item:hover {
     box-shadow: 0px 15px 30px rgba(77, 87, 222, 0.3);
-    background: #fff; }
+    background: #fff; }feature_item {
+      padding: 45px 25px;
+      text-align: center;
+      background: #f9f9fd;
+      cursor: pointer;
+      margin-bottom: 30px;
+      -webkit-transition: all 0.4s ease 0s;
+      -moz-transition: all 0.4s ease 0s;
+      -o-transition: all 0.4s ease 0s;
+      transition: all 0.4s ease 0s; }
+      .feature_item img {
+        margin-bottom: 35px; }
+      .feature_item h4 {
+        font-size: 20px;
+        margin-bottom: 20px;
+        text-transform: uppercase; }
+      .feature_item p {
+        margin-bottom: 0px; }
+      .feature_item:hover {
+        box-shadow: 0px 15px 30px rgba(77, 87, 222, 0.3);
+        background: #fff; }
 
 /* End Features Area css
 ============================================================================================ */
