--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='vendors/nice-select/css/nice-select.css')}}">
 	<!-- main css -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
+
 </head>
 
 <body>
@@ -30,10 +31,16 @@
 						<div class="banner_content">
 							<h3 class="text-uppercase">Привет</h3>
 							<h1 class="text-uppercase">Я Мансур Хамерзаев</h1>
-							<h5 class="text-uppercase">web-backend-python-developer</h5>
+							<h5 class="text-uppercase">python-web-developer</h5>
 							<div class="d-flex align-items-center">
-								<a class="primary_btn" href="https://hh.ru/resume/5f8d6f92ff0984f3f70039ed1f657a5042616a"><span>резюме</span></a>
-								<a class="primary_btn tr-bg" href="https://github.com/Xamerzaev"><span>GitHub</span></a>
+								<a class="primary_btn" href="https://hh.ru/resume/5f8d6f92ff0984f3f70039ed1f657a5042616a"><span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard2-minus" viewBox="0 0 16 16">
+									<path d="M9.5 0a.5.5 0 0 1 .5.5.5.5 0 0 0 .5.5.5.5 0 0 1 .5.5V2a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 2v-.5a.5.5 0 0 1 .5-.5.5.5 0 0 0 .5-.5.5.5 0 0 1 .5-.5h3Z"/>
+									<path d="M3 2.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 0 0-1h-.5A1.5 1.5 0 0 0 2 2.5v12A1.5 1.5 0 0 0 3.5 16h9a1.5 1.5 0 0 0 1.5-1.5v-12A1.5 1.5 0 0 0 12.5 1H12a.5.5 0 0 0 0 1h.5a.5.5 0 0 1 .5.5v12a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5v-12Z"/>
+									<path d="M6 8a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1H6Z"/>
+								  </svg> резюме</span></a>
+								<a class="primary_btn tr-bg" href="https://github.com/Xamerzaev"><span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+									<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+								  </svg> GitHub</span></a>
 							</div>
 						</div>
 					</div>
@@ -73,7 +80,10 @@
 							сертификат по прохождению курса, вы можете скачать чуть ниже.
 						</p>
 						
-						<a class="primary_btn" href="{{ url_for('static', filename='img/1.jpg')}}" download="" title="скачать сертификат"><span>Скачать сертификат</span></a>
+						<a class="primary_btn" href="{{ url_for('static', filename='img/1.jpg')}}" download="" title="скачать сертификат"><span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-richtext" viewBox="0 0 16 16">
+							<path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z"/>
+							<path d="M4.5 12.5A.5.5 0 0 1 5 12h3a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zm0-2A.5.5 0 0 1 5 10h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zm1.639-3.708 1.33.886 1.854-1.855a.25.25 0 0 1 .289-.047l1.888.974V8.5a.5.5 0 0 1-.5.5H5a.5.5 0 0 1-.5-.5V8s1.54-1.274 1.639-1.208zM6.25 6a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5z"/>
+						  </svg> Скачать сертификат</span></a>
 					</div>
 				</div>
 			</div>
@@ -98,32 +108,73 @@
 			</div>
 			<div class="row feature_inner">
 				<div class="col-lg-3 col-md-6">
-					<div class="feature_item">
+					<button style="max-width:210px;width:100%;height: 100%;max-height: 210px;" type="button" class="feature_item" data-toggle="modal" data-target=".bd-example-modal-lg">	
 						<img src="{{ url_for('static', filename='img/services/s1.png')}}" alt="">
-						<h4>Качественную работу</h4>
+							<h4>Адаптация</h4>
+						</button>
+						<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+							<div class="modal-dialog modal-lg">
+								<div class="modal-content">
+									<p><strong>Адаптивная версия сайта — </strong> это специальный дизайн веб-страниц, 
+										при котором элементы сайта меняют свой размер и расположение при разных разрешениях дисплея. 
+										Сайт автоматически адаптируется под размеры устройства, на котором он открыт, будь то монитор ПК, 
+										смартфон или планшет. Благодаря такому типу верстки сайт будет удобно и понятно отображаться на различных 
+										устройствах. С применением технологий адаптивного дизайна функциональность сайта нисколько не страдает.
+									</p>
+								</div>
+							</div>
+						</div>
 					</div>
-				</div>
 				<div class="col-lg-3 col-md-6">
-					<div class="feature_item">
-						<img src="{{ url_for('static', filename='img/services/s2.png')}}" alt="">
-						<h4>Красивый дизайн</h4>
+					<button style="max-width:210px;width:100%;height: 100%;max-height: 210px;" type="button" class="feature_item"  data-toggle="modal" data-target=".bd-example-modal-lgg">						
+							<img src="{{ url_for('static', filename='img/services/s2.png')}}" alt="">
+								<h4>Дизайн</h4>
+							</button>
+						<div class="modal fade bd-example-modal-lgg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+							<div class="modal-dialog modal-lg">
+								<div class="modal-content">
+								<p><strong>Основная задача дизайна сайта -</strong> объединение всех информационных блоков и формирование у посетителя приятного впечатления. 
+									По сути, дизайн задаёт общий стиль вашего сайта, помогает посетителю с первого взгляда понять, что его здесь ждёт. 
+									Грамотно разработанный дизайн является одним из важнейших факторов, определяющих посещаемость вашей веб-страницы.
+									Как правило,  <strong>дизайн сайта –</strong> это внешнее его оформление, которое призвано, как минимум не отпугнуть посетителя 
+									Вашего интернет-ресурса, и как максимум – завлечь, заинтересовать его.</p>
+								</div>
+							</div>
+						</div>
 					</div>
-				</div>
 				<div class="col-lg-3 col-md-6">
-					<div class="feature_item">
-						<img src="{{ url_for('static', filename='img/services/s3.png')}}" alt="">
-						<h4>Быструю работу</h4>
+					<button style="max-width:210px;width:100%;height: 100%;max-height: 210px;" type="button" class="feature_item" data-toggle="modal" data-target=".bd-example-modal-lggg">
+							<img src="{{ url_for('static', filename='img/services/s3.png')}}" alt="">
+							<h4>Импорт товаров</h4>	
+						</button>
+						<div class="modal fade bd-example-modal-lggg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+							<div class="modal-dialog modal-lggg">
+								<div class="modal-content">
+								<p><strong>Импорт товаров из 1c, мой склад и тд.</strong>
+								</br>
+                                В результате на сайте появятся работоспособные карточки товара с его описанием, фотографиями, характеристиками и ценой. Каждому товару присваиваются разнообразные атрибуты, что позволяет реализовать фильтрацию и деление на категории.                            							</p>
+								</div>
+							</div>
+						</div>
 					</div>
-				</div>
 				<div class="col-lg-3 col-md-6">
-					<div class="feature_item">
-						<img src="{{ url_for('static', filename='img/services/s4.png')}}" alt="">
-						<h4>Раскрутку сайта</h4>
+					<button style="max-width:210px;width:100%;height: 100%;max-height: 210px;" type="button" class="feature_item" data-toggle="modal" data-target=".bd-example-modal-ls">
+							<img src="{{ url_for('static', filename='img/services/s4.png')}}" alt="">
+								<h4>Форма связи</h4>
+							</button>
+							<div class="modal fade bd-example-modal-ls" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+							<div class="modal-dialog modal-ls">
+								<div class="modal-content">
+								<p>
+									Они будут максимально удобны для всех покупателей. Эти части сайта дотошно проверяются на работоспособность.</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-	</section>
+			</div>	
+		</div>	
+</section>
 	<!--================ End Features Area =================-->
 
 
@@ -153,10 +204,15 @@
 							Просто напишите мне в удобном для вас приложении :) 
 						</p>
 						<div class="subcribe-form" id="mc_embed_signup">
-							<a class="primary_btn tr-bg" href="https://t.me/mahamerz"><span>telegram</span></a>
-							<br>
-							<a class="primary_btn tr-bg" href="https://wa.me/+79389926611"><span>whatsapp</span></a>
-							<a class="primary_btn tr-bg" href="https://www.instagram.com/mahamerz/"><span>instagram</span></a>
+							<a class="primary_btn tr-bg" href="https://t.me/mahamerz"><span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
+								<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"/>
+							  </svg> telegram</span></a>
+							<a class="primary_btn tr-bg" href="https://wa.me/+79389926611"><span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+								<path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+							  </svg> whatsapp</span></a>
+							<a class="primary_btn tr-bg" href="https://www.instagram.com/mahamerz/"><span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+								<path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
+							  </svg> instagram</span></a>
 
 								<div class="info"></div>
 							</form>
