--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -108,7 +108,8 @@
 			</div>
 			<div class="row feature_inner">
 				<div class="col-lg-3 col-md-6">
-					<button style="max-width:210px;width:100%;height: 100%;max-height: 210px;" type="button" class="feature_item" data-toggle="modal" data-target=".bd-example-modal-lg">	
+					<button style="max-width:210px;width:100%;height: 100%;max-height: 210px;  margin: 0 auto;
+					display: block;" type="button" class="feature_item" data-toggle="modal" data-target=".bd-example-modal-lg">	
 						<img src="{{ url_for('static', filename='img/services/s1.png')}}" alt="">
 							<h4>Адаптация</h4>
 						</button>
@@ -126,7 +127,8 @@
 						</div>
 					</div>
 				<div class="col-lg-3 col-md-6">
-					<button style="max-width:210px;width:100%;height: 100%;max-height: 210px;" type="button" class="feature_item"  data-toggle="modal" data-target=".bd-example-modal-lgg">						
+					<button style="max-width:210px;width:100%;height: 100%;max-height: 210px;  margin: 0 auto;
+					display: block;" type="button" class="feature_item"  data-toggle="modal" data-target=".bd-example-modal-lgg">						
 							<img src="{{ url_for('static', filename='img/services/s2.png')}}" alt="">
 								<h4>Дизайн</h4>
 							</button>
@@ -143,7 +145,8 @@
 						</div>
 					</div>
 				<div class="col-lg-3 col-md-6">
-					<button style="max-width:210px;width:100%;height: 100%;max-height: 210px;" type="button" class="feature_item" data-toggle="modal" data-target=".bd-example-modal-lggg">
+					<button style="max-width:210px;width:100%;height: 100%;max-height: 210px;  margin: 0 auto;
+					display: block;" type="button" class="feature_item" data-toggle="modal" data-target=".bd-example-modal-lggg">
 							<img src="{{ url_for('static', filename='img/services/s3.png')}}" alt="">
 							<h4>Импорт товаров</h4>	
 						</button>
@@ -158,7 +161,8 @@
 						</div>
 					</div>
 				<div class="col-lg-3 col-md-6">
-					<button style="max-width:210px;width:100%;height: 100%;max-height: 210px;" type="button" class="feature_item" data-toggle="modal" data-target=".bd-example-modal-ls">
+					<button style="max-width:210px;width:100%;height: 100%;max-height: 210px;  margin: 0 auto;
+					display: block;" type="button" class="feature_item" data-toggle="modal" data-target=".bd-example-modal-ls">
 							<img src="{{ url_for('static', filename='img/services/s4.png')}}" alt="">
 								<h4>Форма связи</h4>
 							</button>
@@ -166,7 +170,7 @@
 							<div class="modal-dialog modal-ls">
 								<div class="modal-content">
 								<p>
-									Они будут максимально удобны для всех покупателей. Эти части сайта дотошно проверяются на работоспособность.</p>
+									Она будет максимально удобна для всех покупателей. Эта часть сайта дотошно проверяется на работоспособность.</p>
 								</div>
 							</div>
 						</div>
