--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -353,8 +353,8 @@ button:focus {
       padding-top: 197px; }
       @media (max-width: 100%) {
         .home_banner_area .banner_inner .home_right_img img {
-          max-width: 100%;
-          max-height: 100%; } }
+          max-width: 100px;
+          max-height: 100px; } }
       @media (max-width: 100%) {
         .home_banner_area .banner_inner .home_right_img {
           display: none; } }
